<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    tools:context=".Register">

    <ImageButton
        android:id="@+id/btnRegresa"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@color/WhiteSmoke"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/regreso" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txtRegistro"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegresa" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filNombre"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtNombre"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="612dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filFechaNacimiento"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtFechaDeNacimiento"
            android:inputType="text|date"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="612dp"    />

        <DatePicker
            android:id="@+id/cvCalendario"
            android:layout_width="403dp"
            android:layout_height="73dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="295dp"></DatePicker>



    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filCorreo"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filFechaNacimiento">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtCorreoElectronico"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="612dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filCorreo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtContraseña"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="612dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eContrasena2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtConfirmarContraseña"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="612dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegistrarse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/boton_1"
        android:text="@string/btnRegistrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.428" />



</androidx.constraintlayout.widget.ConstraintLayout>