<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    tools:context=".LogIn">

    <ImageButton
        android:id="@+id/btnRegres"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@color/WhiteSmoke"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/regreso" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txtInicioSesion"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegres" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filCorreo"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtCorreoElectronico"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="612dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filCorreo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtContraseña"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="612dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    </com.google.android.material.textfield.TextInputLayout>

        />
    <!--<View
        android:id="@+id/view"
        android:layout_width="370dp"
        android:layout_height="1.5dp"
        android:layout_marginTop="28dp"
        android:background="@color/blueDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSesion" / -->

    <Button
        android:id="@+id/btnSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/boton_1"
        android:text="@string/btnInicioSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/btnCCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/WhiteSmoke"
        android:text="@string/btnCrearCuenta"
        android:textColor="@color/Azul"
        app:backgroundTint="@color/WhiteSmoke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSesion" />

    <Button
        android:id="@+id/btnRecuperarContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/WhiteSmoke"
        android:text="Olvidaste tu Contraseña"
        android:textColor="@color/Azul"
        app:backgroundTint="@color/WhiteSmoke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCCuenta" />


</androidx.constraintlayout.widget.ConstraintLayout>